Align variable group name in pipeline file with name used in Devops pipeline library defintion

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -75,7 +75,7 @@ stages:
       vmImage: 'ubuntu-16.04'
     environment: dev
     variables:
-    - group: Release
+    - group: ReleaseVariables
     strategy:
       runOnce:
         deploy:
